Circle CI updates for rust build

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,7 @@ version: 2.1
 
 jobs:
   build:
+    working_directory: ~/rust_projects/guessing_game
     docker:
       - image: rust:latest
     steps:
